test-commands/src/snapshots/test_commands__tests__compile_package_beam.snap
---
source: test-commands/src/tests.rs
expression: app
---
{application, compile_package, [
    {vsn, "1.0.0"},
    {applications, [dev_dependency,
                    regular_dependency]},
    {description, ""},
    {modules, [compile_package,
               compile_package_dev,
               compile_package_test]},
    {registered, []}
]}.
