test-commands/src/snapshots/test_commands__tests__compile_package_beam_no_dev.snap
---
source: test-commands/src/tests.rs
expression: app
---
{application, compile_package, [
    {vsn, "1.0.0"},
    {applications, [regular_dependency]},
    {description, ""},
    {modules, [compile_package]},
    {registered, []}
]}.
