test-commands/src/snapshots/test_commands__tests__escript_with_wrong_arity_main_function.snap
---
source: test-commands/src/tests.rs
expression: error
---
error: Main function has wrong arity

`with_wrong_arity_main_function.main` should take no arguments, but it
takes 1.

Hint: Change the function signature of main to `pub fn main() -> Nil`.
