test-commands/src/snapshots/test_commands__tests__escript_without_main_function.snap
---
source: test-commands/src/tests.rs
expression: error
---
error: Module does not have a main function

`without_main_function` does not have a main function so the module can not
be run.

Hint: Add a public `main` function to `src/without_main_function.gleam`.
