test-commands/src/snapshots/test_commands__tests__publishing_default_main.snap
---
source: test-commands/src/tests.rs
expression: error
---
error: Cannot publish with no README

You appear to be attempting to publish a package with no README.
All published packages should have one.


Hint: Add a README to your project before publishing.
