test-commands/src/snapshots/test_commands__tests__publishing_default_readme.snap
---
source: test-commands/src/tests.rs
expression: error
---
error: Cannot publish with default README

You appear to be attempting to publish a package with the default README
generated by the `gleam new` command. That is meant as a placeholder and a
published package should have its own carefully written README.


Hint: Update your project's README to describe it before publishing
